Update Quantum Edge Detection Code.ipynb

--- a/Quantum Edge Detection Code.ipynb
+++ b/Quantum Edge Detection Code.ipynb
@@ -352,7 +352,7 @@
    "source": [
     "# Simulating the cirucits\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "service = QiskitRuntimeService(channel='ibm_quantum', token='6e0a6688b20010a249e375a60b3c01270a957077bd1a7cab58f52646a7adc4b044061eda691679b2a3e97f04518e292e723f968d9c1cd089fcddb8a70b16a86f')\n",
+    "service = QiskitRuntimeService(channel='ibm_quantum', token='",
     "back = service.backend(name='simulator_statevector')\n",
     "\n",
     "from qiskit import transpile\n",
